--- a/背景运动渐变.html
+++ b/背景运动渐变.html
@@ -8,8 +8,8 @@
     <title>Document</title>
     <style>
         .box {
-            height: 300px;
-            width: 300px;
+            height: 100vh;
+            width: 100vw;
             display: flex;
             justify-content: center;
             align-items: center;
