--- a/背景运动渐变.html
+++ b/背景运动渐变.html
@@ -10,10 +10,12 @@
         .box {
             height: 100vh;
             width: 100vw;
+            box-sizing: border-box;
             display: flex;
             justify-content: center;
             align-items: center;
             color: #fff;
+            overflow: hidden;
             background: linear-gradient(125deg, #2c3e50, #27ae60, #2980b9, #e74c3c, #8e44ad);
             background-size: 400%;
             animation: bgmove 20s infinite;
