--- a/背景运动渐变.html
+++ b/背景运动渐变.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
         .box {
             height: 100vh;
             width: 100vw;
