面试题+虚拟渲染

--- a/a==1&&a==2&&a==3.html
+++ b/a==1&&a==2&&a==3.html
@@ -11,12 +11,12 @@
 <body>
     <script>
         // 1
-        // const a = {
-        //     _a: 0,
-        //     toString: function () {
-        //         return ++a._a
-        //     }
-        // }
+        const a = {
+            _a: 0,
+            toString: function () {
+                return ++a._a
+            }
+        }
 
         if (a == 1 && a == 2 && a == 3) {
             console.log("方法改写成功")
