--- a/数组去重.html
+++ b/数组去重.html
@@ -12,83 +12,83 @@
     <script>
         let arr = [1, 34, 5, 6, 64, 6, 43]
         // 方法一
-        // function arrChange(arr) {
-        //     let newArr
-        //     if (Array.isArray(arr)) {
+        function arrChange(arr) {
+            let newArr
+            if (Array.isArray(arr)) {
 
-        //         newArr = [...new Set(arr)] 
-        //         return newArr
-        //     } else {
-        //         console.log("请传入数组")
-        //     }
-        // }
+                newArr = [...new Set(arr)] 
+                return newArr
+            } else {
+                console.log("请传入数组")
+            }
+        }
 
         // arrChange(arr)
         // console.log(arrChange(arr))
         // 方法二
-        // function arrChange(arr) {
-        //     let newArr
-        //     if (Array.isArray(arr)) {
+        function arrChange(arr) {
+            let newArr
+            if (Array.isArray(arr)) {
 
-        //         for (let i = 0, len = arr.length; i < len; i++) {
+                for (let i = 0, len = arr.length; i < len; i++) {
 
-        //             for (let j = i + 1; j < len; j++) {
-        //                 console.log(i,j)
-        //                 if (arr[i] == arr[j]) {
-        //                     arr.splice(j, 1)
-        //                     j--
-        //                     len--
-        //                 }
+                    for (let j = i + 1; j < len; j++) {
+                        console.log(i,j)
+                        if (arr[i] == arr[j]) {
+                            arr.splice(j, 1)
+                            j--
+                            len--
+                        }
 
-        //             }
-        //         }
+                    }
+                }
 
-        //         return arr
+                return arr
 
-        //     } else {
-        //         console.log("请传入数组")
-        //     }
-        // }
+            } else {
+                console.log("请传入数组")
+            }
+        }
         // arrChange(arr)
         // console.log(arrChange(arr))
         // 方法三
-        // function arrChange(arr) {
-        //     let newArr = []
-        //     if (Array.isArray(arr)) {
+        function arrChange(arr) {
+            let newArr = []
+            if (Array.isArray(arr)) {
 
-        //         for (let i = 0; i < arr.length; i++) {
-        //             if (newArr.indexOf(arr[i]) == -1) {
-        //                 newArr.push(arr[i])
-        //             }
-        //         }
+                for (let i = 0; i < arr.length; i++) {
+                    if (newArr.indexOf(arr[i]) == -1) {
+                        newArr.push(arr[i])
+                    }
+                }
 
-        //         return newArr
+                return newArr
 
 
-        //     } else {
-        //         console.log("请传入数组")
-        //     }
-        // }
+            } else {
+                console.log("请传入数组")
+            }
+        }
         // arrChange(arr)
         // console.log(arrChange(arr))
         // 方法四
-        // function arrChange(arr) {
-        //     let newArr = []
-        //     if (Array.isArray(arr)) {
+        function arrChange(arr) {
+            let newArr = []
+            if (Array.isArray(arr)) {
 
-        //         for (let i = 0; i < arr.length; i++) {
-        //             if (!newArr.includes(arr[i])) {
-        //                 newArr.push(arr[i])
-        //             }
-        //         }
+                for (let i = 0; i < arr.length; i++) {
+                    if (!newArr.includes(arr[i])) {
+                        newArr.push(arr[i])
+                    }
+                }
 
-        //         return newArr
+                return newArr
 
 
-        //     } else {
-        //         console.log("请传入数组")
-        //     }
-        // }
+            } else {
+                console.log("请传入数组")
+            }
+        }
         // arrChange(arr)
         // console.log(arrChange(arr))
         // 方法五
